@startuml

skinparam classAttributeIconSize 0

class Company {
-designation
}
class Test {
-code
}
class Client {
-birthDate
}
class MultiLinearRegression{
}
class LinearRegression{
}
class WriteReport{
}
class TestParameterResult {
-value
}
class Category {
-code
-description
}
class TestType {
-code
-description
}
class Parameter {
-code
-description
}


"NHS API" "1"-left-"*" WriteReport : sent via <
"NHS API" -right- NHS : owned by >
MultiLinearRegression "*"--"1" Company : generates <
LinearRegression "*"--"1" Company : generates <
MultiLinearRegression "*"-up-"1" WriteReport : creates >
LinearRegression "*"-up-"1" WriteReport : creates >
Test "*"-up-"1" Company : performs <
Test "*"--"1" Client : requested by >
Test "*"-right-"1" "TestType" : is of >
TestType "1"--"1..*" Category : has >
Parameter "*"--"1" Category : presented under >
TestParameterResult "1"--"1" Parameter : associated to >

@enduml